# easy_input_rust

./: README.md
easy_user_input/: Cargo.toml
easy_user_input/src/: lib.rs
