[package]
name = "easy_user_input"
version = "0.1.0"
edition = "2021"
authors = ["Parsa Aghasi"]

description = "A library for making inout process easier to use"
repository = "https://github.com/dumindu/test_crate_hello_world"
keywords = ["input"]
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
